tests/ui/issues/issue-5439.stderr
error[E0560]: struct `Foo` has no field named `nonexistent`
  --> $DIR/issue-5439.rs:11:31
   |
LL |         return Box::new(Foo { nonexistent: self, foo: i });
   |                               ^^^^^^^^^^^ `Foo` does not have this field
   |
   = note: all struct fields are already assigned

error: aborting due to previous error

For more information about this error, try `rustc --explain E0560`.
